--- a/src/main/resources/templates/product_form.html
+++ b/src/main/resources/templates/product_form.html
@@ -2,12 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Product Form</title>
+  <title th:text="${product.id} != null ? 'Update Product' : 'Add Product'">Product Form</title>
   <link rel="stylesheet" th:href="@{/css/styles.css}" />
 </head>
 <body>
 <h1 th:text="${product.id} != null ? 'Edit Product' : 'Add Product'"></h1>
-<form th:action="@{/api/products/create}" method="post">
+<form th:action="${product.id} != null ? '/api/products/update/' + ${product.id} : '/api/products/create'" method="post">
+
   <input type="hidden" th:if="${product.id}" th:value="${product.id}" name="id" />
   <label for="name">Name:</label>
   <input type="text" id="name" name="name" th:value="${product.name}" required />
@@ -18,7 +19,7 @@
   <label for="imageUrl">Image URL:</label>
   <input type="url" id="imageUrl" name="imageUrl" th:value="${product.imageUrl}" required />
   <br>
-  <button type="submit">Save</button>
+  <button type="submit" th:text="${product.id} != null ? 'Update' : 'Save'">Save</button>
   <a href="#" th:href="@{/api/products}">Cancel</a>
 </form>
 </body>
